test/corpus/function_decl.txt
================================================================
Function Declarations
================================================================

module Main exposing (..)
    foreign sqrt(x : Float) -> Float =
        "c_sqrt"

    let double(x : Int) -> Int =
        x * 2

    let apply(f, x) =
        f(x)
end

----------------------------------------------------------------

(source_file
  (module_declaration
    (upper_qid
      (upper_identifier))
    (exposing_list
      (expose_all))
    (statement
      (foreign_function_declaration
        (lower_identifier)
        (parameter_list
          (lower_identifier)
          (type_annotation
            (type_expression
              (upper_identifier))))
        (return_type
          (type_expression
            (upper_identifier)))
        (string_literal)))
    (statement
      (function_declaration
        (lower_identifier)
        (parameter_list
          (lower_identifier)
          (type_annotation
            (type_expression
              (upper_identifier))))
        (return_type
          (type_expression
            (upper_identifier)))
        (binary_expression
          (lower_identifier)
          (integer_literal))))
    (statement
      (function_declaration
        (lower_identifier)
        (parameter_list
          (lower_identifier)
          (lower_identifier))
        (function_call
          (lower_identifier)
          (lower_identifier))))))
